--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@
 *.user
 *.userosscache
 *.sln.docstates
-
+*.firebase-service-account.json
+*.appsettings.Development.json
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
